[package]
name = "doublecount"
version = "0.2.1"
description = "A double entry accounting system/library."
keywords = ["financial", "currency", "accounting", "exchange", "rate"]
categories = ["science", "mathematics"]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kellpossible/doublecount"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
serde-support = ["commodity/serde-support", "rust_decimal/serde", "serde_json", "serde"]

[dependencies]
chrono = "0.4"
nanoid = "0.3.0"
thiserror = "1.0"
rust_decimal = { version = "1.3.0", default-features = false }
commodity = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }